--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem; /* Optional: adds spacing between cards */
 }
 
 .read-the-docs {
@@ -37,13 +36,13 @@
   width: 130px;
   height: 100px;
   top: 50%;
+  bottom: 50%;
   left: 50%;
-  margin: 0.3rem auto;
 }
+
 /*code for switch adapted from: https://codepen.io/ahmadbassamemran/pen/yLBXBmy*/
 .switch {
   position: relative;
-
   width: 130px;
   height: 50px;
   margin: 0px;
@@ -123,19 +122,105 @@
   border: 1px solid black;
 }
 
+.day .selected {
+  background-color: rgb(137, 229, 137);
+  color: black;
+  border: 2px solid black;
+  font-weight: bold;
+}
+
 .night {
   background-color: darkslategray;
   color: white;
   border: 1px solid white;
 }
 
+.night .card {
+  background-color: black;
+  color: white;
+}
+
+.night #headerLogo {
+  background-color: aliceblue;
+  border-radius: 0.4rem;
+  padding: 0.1rem;
+}
+.night .headerContainer {
+  background-color: black;
+}
 .night button {
   background-color: rgb(5, 39, 39);
   color: white;
   border: 1px solid white;
 }
 
+.night .selected {
+  background-color: green;
+  border: 2px solid white;
+  font-weight: bold;
+}
+
+button:hover {
+  opacity: 0.7;
+}
+
 .inactive {
   color: gray;
-  opacity: 0.7;
+  opacity: 0.8;
+}
+
+.headerContainer {
+  background-color: rgb(213, 251, 252);
+  color: white;
+  display: flex;
+  max-width: 80%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border-radius: 1rem;
+}
+
+.cardOptions {
+  display: flex;
+  max-width: 80%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 100%;
+}
+
+.selected {
+  background-color: green;
+}
+
+.notSelected {
+  background-color: gray;
+}
+@media (max-width: 600px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+}
+
+.headerContainer h1 {
+  padding-top: 0;
+  margin-top: 0;
+}
+.wrapper {
+  margin-top: 2.5rem;
+}
+
+#buttonBox {
+  text-align: right;
+  max-width: 90%;
+  display: flex;
+  justify-content: right;
+}
+
+#buttonBox button {
+  margin: 0.5rem;
+  padding-right: -2rem;
 }
